# browserstation

./: .gitignore  Dockerfile.arm  LICENSE  README.md  pyproject.toml  rayservice.yaml
app/: __init__.py  lib.py  main.py  models.py  routes.py  service.py
dashboard/: .env.example  .env.local  package-lock.json  package.json
dashboard/app/: page.tsx
dashboard/components/: LiveBrowserView.tsx
dashboard/lib/: api.ts
examples/: browse_demo.py  browseruse_agent.py  crewai_agent.py  langchain_agent.py
scripts/: quickstart.sh  teardown.sh
terraform/aws/: DEPLOYMENT_INSTRUCTIONS.md  README.md  deploy.sh  image_build.tf  kubernetes.tf  locals.tf  main.tf  outputs.tf  providers.tf  rayservice.yaml  scripts.tf  teardown.sh  variables.tf  versions.tf
terraform/aws/01-infra/: image_build.tf  locals.tf  main.tf  outputs.tf  providers.tf  tfplan  variables.tf
terraform/aws/02-k8s/: main.tf  outputs.tf  providers.tf  variables.tf
terraform/aws/02-k8s/templates/: rayservice.yaml.tpl
terraform/aws/templates/: rayservice.yaml.tpl
terraform/azure/: README.md
terraform/google/: teardown.sh
terraform/google/01-infra/: .gitignore  README.md  image_build.tf  locals.tf  main.tf  outputs.tf  providers.tf  variables.tf
terraform/google/02-k8s/: README.md  main.tf  outputs.tf  providers.tf  variables.tf
terraform/google/02-k8s/templates/: rayservice.yaml.tpl
tests/: test_websocket.py
